# BigInteger

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  biginteger.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  add.cpp  arithmetic.cpp  constructor.cpp  div.cpp  functions.cpp  invert.cpp  mod.cpp  mult.cpp  shift.cpp  sub.cpp  testbiginteger.h
